examples/test/testpolicy9676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9676
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key24: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value42
          key38: value34
          key28: value45
      podSelector:
        matchLabels:
          key16: value7
          key27: value16
